alignment fixed

--- a/grid.css
+++ b/grid.css
@@ -5,24 +5,27 @@
   margin-left: 5px;
   margin-right: 70px;
   margin-bottom: 20px;
+  max-width: 750px;
+  margin: auto;
 }
 .part_B{
 	padding-right: 5px;
-	padding-top: 130px;
+	padding-top: 62%;
 	padding-left: 5%;
 }
 .header{
 	display: grid;
 	grid-template-columns: 1fr 4fr;
-	padding-right: 5%;
 }
-.header_title{
-	font-size: 40px;
+.undernith_header_title{
+	margin-top: 7px;
+	margin-bottom: 5px;
+	color: gray;
 }
 .big_pic{
 	width: 100%;
 	padding-top: 15px;
-	height: 350px;
+	height: 240px;
 }
 .all_images{
 	
@@ -30,9 +33,9 @@
 	flex-wrap: wrap;
 }
 .image1{
-	height: 150px;
-	width:	300px;
-	margin-right: 7px;
+	height: 100px;
+	width:	182px;
+	margin-right: 6px;
 }
 .div2{
 	text-align: center;
@@ -62,7 +65,8 @@
 
 }
 .header_logo{
-	width: 80px;
+	width: 60px;
+	margin-top: 5px;
 }
 
 .header_title{
@@ -70,18 +74,16 @@
 	margin-bottom: 5px;
 }
 .body_pic{
-	margin-top: 20px;
 	border-color: #7d97ad;
 	border-top-width: 4px;
 	border-top-style: solid;
 }
 .text{
-	font-size: 35px;
+	color: gray;
 	font-family: "Times New Roman", Times, serif;
 }
 .header_title{
 	font-family: "Times New Roman", Times, serif;
-	font-weight: normal;
 }
 .blue_div{
 	width: 80%;
